styling changes fixed positioning, z-indexes and moving css away from unnecessary div in base.html to main instead

--- a/cafeOrdering/static/css/base.css
+++ b/cafeOrdering/static/css/base.css
@@ -19,12 +19,12 @@ html {
     background-color: var(--main-green);
     width: 100%;
     height: 50px;
-    position: relative;
+    position: fixed;
     display: flex;
     align-items: center;
     padding: 0;
     box-shadow: 0px 2px 4px var(--off-black);
-    z-index: 1;
+    z-index: 9;
 }
 
 .burger-container {
@@ -38,11 +38,12 @@ html {
     display: flex;
     height: 50px;
     width: 50px;
-    z-index: 3;
+    z-index: 11;
 }
 
 .burger-btn svg {
     margin: auto;
+    z-index: 11;
 }
 
 .burger-btn:focus {
@@ -97,15 +98,15 @@ html {
 
 .dropdwn-mnu {
     display: none;
-    position: absolute;
-    top: 50px; 
+    position: fixed;
+    top: 0; 
     left: 0;
     width: 100%;
-    height: calc(100vh - 50px); 
+    height: 100%; 
     justify-content: center;
     align-items: center; 
     background-color: var(--off-black);
-    z-index: 99;
+    z-index: 10;
 }
 
 .dropdwn-mnu ul {
